2006.07.01
----------
- added an InfoBox for Family
- lots of improvements all the infoboxes

2006.06.30
----------
- improved behavior of resetting the view after an action has been done
from the context menu or insert menu
- don't change sensitivity on search
- first go at a Genus infobox

2006.06.29
----------
- change the way the results in the search view are displayed and how the 
context menu is built, push more of the work off to the plugins since they 
should know more about the types the represent

2006.06.28
----------
- fixed error message in update_infobox if the iter was None
- fixed a problem when trying to commit donations, refactored out fixing up
the model from the accession source presenter depending on the type of the 
presenter

2006.06.26
----------
release 0.5.2

2006.06.25
----------
- pass species correctly accession editor when opened from the species editor
- fixes for windows
- set app busy when creating a new database, this doesn't work very well since
the gui isn't given time to update and csv import doesn't block
- now get plants from family and genera in results 
- make sure that the plants in the formatter list are unique
- other minor improvements to formatter plugin and documentation updates

2006.06.24
----------
- on going doc improvements
- improved speed of editor.SQLObjectProxy by doing less attribute lookups
in some methods
- removed some unnecessary code in species_editor.py
- removing a row from the vernacular name table with now set any 
Species.default_vernacular_name column to None if the default_vernacular_name
refers to the deleted row
- basic cleanup/fixing to get ready for 0.5.2 release
- new vernacular names and synonyms are now blue to show that they have just 
been added but not committed
- some tweaks to the search results tree view
- update infobox after editing an existing row

2006.06.21
----------
- documentation updates
- species now includes sp_qual in the name and the id_qual is included
in the infobox
